--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_color_primary">#455A64</color>
+    <color name="light_color_primary">#CFD8DC</color>
+    <color name="color_primary">#607D8B</color>
+    <color name="color_accent">#FFC107</color>
+    <color name="color_text_primary">#212121</color>
+    <color name="color_text_secondary">#757575</color>
+    <color name="color_divider">#BDBDBD</color>
 </resources>
