--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,13 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:layout_margin="18dp"
+    android:background="@drawable/list_item_background"
+    android:layout_marginBottom="10dp"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Title"
+        android:fontFamily="sans-serif-condensed"
         android:textColor="@color/color_text_primary"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -24,10 +28,11 @@
 
     <TextView
         android:id="@+id/textContent"
+        android:paddingTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Content"
-        android:textColor="@color/color_text_secondary"
-        android:textSize="12sp" />
+        android:textColor="@color/color_text_primary"
+        android:textSize="14sp" />
 
 </LinearLayout>
