--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,18 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_margin="18dp"
-    android:background="@drawable/list_item_background"
-    android:layout_marginBottom="10dp"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title"
         android:fontFamily="sans-serif-condensed"
+        android:text="Title"
         android:textColor="@color/color_text_primary"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -28,11 +26,10 @@
 
     <TextView
         android:id="@+id/textContent"
-        android:paddingTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="5dp"
         android:text="Content"
         android:textColor="@color/color_text_primary"
         android:textSize="14sp" />
-
 </LinearLayout>
